powerdns webserver listening on the local interface only
`webserver-allow-from` defaults to 127.0.0.1 so this is currently the only
address worth listening on. Added a variable to allow this be configurable in
the future.

--- a/chef/cookbooks/bcpc/templates/default/powerdns/pdns.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/powerdns/pdns.conf.erb
@@ -64,7 +64,7 @@ webserver = yes
 
 # webserver-address    Address webserver to listen on
 #
-webserver-address = <%= node['service_ip'] %>
+webserver-address = <%= node['bcpc']['powerdns']['webserver']['address'] %>
 
 # webserver-port    Port of webserver to listen on
 #
