--- a/chef/cookbooks/bcpc/templates/default/nova/nova.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/nova/nova.conf.erb
@@ -48,7 +48,7 @@ default_log_levels = "<%= node['bcpc']['nova']['default_log_levels'] %>"
 auth_strategy = keystone
 
 <% if not node['bcpc']['nova']['vendordata']['name'].nil? %>
-vendordata_dynamic_targets = <%= node['bcpc']['nova']['vendordata']['name'] %>@https://<%= "#{@node['bcpc']['cloud']['fqdn']}" %>:<%= node['bcpc']['nova']['vendordata']['port'] %>
+vendordata_dynamic_targets = <%= node['bcpc']['nova']['vendordata']['name'] %>@https://<%= @node['bcpc']['cloud']['fqdn'] %>:<%= node['bcpc']['nova']['vendordata']['port'] %>
 vendordata_providers = DynamicJSON,StaticJSON
 <% end -%>
 
