fix dns domain on vms to match v7 behaviour
In v7, the dns domain defaults to the cluster domain name. e.g. ip-10.10.10.10.cluster.example.com
In v7, the dhcp dns search domain defaults to the cluster name. e.g. cluster.example.com
In v8, the dns domain defaults to novalocal. e.g. myhostname.novalocal
In v8, the dhcp dns search domain defaults to openstacklocal. This causes
delays in DNS lookups to external servers as the wrong domain is used.

This commit fixes the behaviour to match the v7 behaviour for both dhcp dns
search domain and dns domain.

Coupled with a suitable cloud-init fragment for setting the hostname, this
commit allows the external vm dns entry to match the internal vm fqdn.

--- a/chef/cookbooks/bcpc/templates/default/calico/neutron.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/calico/neutron.conf.erb
@@ -1,6 +1,7 @@
 [DEFAULT]
 core_plugin = calico
 state_path = /var/lib/neutron
+dns_domain = <%= node['bcpc']['cloud']['domain'] %>
 
 [calico]
 etcd_host = 127.0.0.1
